# kimi-cli

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  GUIDE.md  HUMAN.md  Makefile  NOTICE  README.md  flake.nix  kimi.spec  pyproject.toml
.github/: pull_request_template.md
docs/: AGENTS.md  index.md  package.json  quick-reference.md  user-guide.md
klips/: .pre-commit-config.yaml  klip-0-klip.md  klip-1-kimi-cli-monorepo.md  klip-10-agent-flow.md  klip-11-kimi-code-rename.md  klip-12-wire-initialize-external-tools.md  klip-14-kimi-code-oauth-login.md  klip-2-acpkaos.md  klip-3-kimi-cli-user-docs.md  klip-6-setup-auto-refresh-models.md  klip-7-kimi-sdk.md  klip-8-config-and-skills-layout.md  klip-9-shell-ui-flicker-mitigation.md
scripts/: build_web.py  check_kimi_dependency_versions.py  check_version_tag.py  install.ps1  install.sh
tests/: conftest.py  test_agent_spec.py  test_attachment_cache.py  test_bash.py  test_create_subagent.py  test_default_agent.py  test_fetch_url.py  test_glob.py  test_kaos_path.py  test_load_agent.py  test_load_agents_md.py  test_local_kaos.py  test_message_utils.py  test_pyinstaller_utils.py  test_read_file.py  test_soul_message.py  test_str_replace_file.py  test_tool_descriptions.py  test_wire_message.py  test_write_file.py
tests_e2e/: AGENTS.md  test_wire_approvals_tools.py  test_wire_config.py  test_wire_errors.py  test_wire_prompt.py  test_wire_protocol.py  test_wire_real_llm.py  test_wire_sessions.py  test_wire_skills_mcp.py  wire_helpers.py
web/: .gitignore  biome.jsonc  index.html  openapi.json  (+5 more)
(+361 files in other folders)
